# aa-alias-manager

./: Cargo.toml  README.md  flake.nix  patterns.json
checks/: test.nix  vm-test-config.nix
nix/: aa-alias-module.nix  aa-alias-patterns.json  package.nix  vm-test-config.nix
src/: args.rs  main.rs  pattern.rs
