[package]
name = "aa-alias-manager"
version = "0.1.0"
edition = "2021"
authors = [ "Grimmauld <grimmauld@grimmauld.de>" ]
description = "Tool to generate a file of aliases for apparmor based on current nixos generation"
license-file = "LICENSE"

[dependencies]
clap = {version="4.5.4", features = ["derive"]}
clap-stdin = "0.4.0"
