[package]
name = "aa-alias-manager"
version = "0.1.0"
edition = "2021"
authors = [ "Grimmauld <grimmauld@grimmauld.de>" ]
description = "Tool to generate a file of aliases for apparmor based on current nixos generation"
license-file = "LICENSE"

[dependencies]
clap = {version="4.5.21", features = ["derive"]}
clap-stdin = "0.5.1"

serde_json = "1.0.132"
serde = { version = "1.0", features = ["derive"] }

is_executable = "1.0.4"